==> zhanglei0/key_board_code/键盘透传/USB接口芯片CH374所有应用源码/USB接口芯片CH374所有应用源码/USB接口芯片CH374所有应用源码/CH374_code/CH374LIB/AVR/LIBD/EXAM6/CH374HFT.c <==
#include <string.h>
#include <stdio.h>
#define		F_CPU	16000000		/* 单片机主频为16MHz,用于延时子程序 */
#include <util/delay.h>
#include <avr/io.h>
#define LIB_CFG_INT_EN			0		/* CH374的INT#引脚连接方式,0为"查询方式",1为"中断方式" */
#define CH374_INT_WIRE			( PINB & 0x10 )	/* PINB.4, CH374的中断线INT#引脚,连接CH374的INT#引脚,用于查询中断状态 */
#define NO_DEFAULT_CH374_F_ENUM		1		/* 未调用CH374FileEnumer程序故禁止以节约代码 */
#define NO_DEFAULT_CH374_F_QUERY	1		/* 未调用CH374FileQuery程序故禁止以节约代码 */
#define NO_DEFAULT_CH374_RESET		1		/* 未调用CH374Reset程序故禁止以节约代码 */
#include "..\CH374HFD.H"

void	mInitSTDIO( )
{
	UBRR0H = 0;
	UBRR0L = 103;  /* 9600bps@16MHz */
	UCSR0B = 0x18; /* BIT(RXEN) | BIT(TXEN); */
	UCSR0C = 0x06; /* BIT(UCSZ1) | BIT(UCSZ0); */
	stdout = stdin = &uart_str;
}
